--- a/HopIn/src/app/user-graph/user-graph.component.html
+++ b/HopIn/src/app/user-graph/user-graph.component.html
@@ -14,6 +14,7 @@
                 <div class="dropdown-content">
                   <a (click)="setDistanceTraveledDD()">Distance traveled</a>
                   <a (click)="setRidesNumDD()">Number of rides</a>
+                  <a (click)="setMoneySpentDD()">Money spent</a>
                 </div>
             </div>
         </div>
