--- a/HopIn/src/app/favourite-routes/favourite-routes.component.css
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.css
@@ -14,6 +14,8 @@ p {
     border: 1px solid #E6E6E6;
     border-radius: 10px;
     margin-left: 2vw;
+    Overflow-y:scroll;
+    overflow-x: hidden;
 }
 
 h2 {
