--- a/HopIn/src/app/route-suggestion/route-suggestion.component.html
+++ b/HopIn/src/app/route-suggestion/route-suggestion.component.html
@@ -60,7 +60,7 @@
         </div>
         <div id="bottom-text">
             <p>Interested in this ride?</p>
-            <a href="#"><span class="orange">Log in</span> and Hop In!</a>
+            <a href="#" [routerLink]="['/login']"><span class="orange">Log in</span> and Hop In!</a>
         </div>
     </div>
 
