--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
   <div id="content">
-    <!-- <router-outlet></router-outlet> -->
-    <route-suggestion></route-suggestion>
+    <router-outlet></router-outlet>
+    <!-- <route-suggestion></route-suggestion> -->
   </div>
 </div>
