--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -1,4 +1,4 @@
-<div id="account-container">
+<div id="account-container" [ngClass]="isDriver ? 'account-container-driver' : 'account-container-passenger'">
     <img [src]="url" class="profile-img">
   
     <p id="userName">{{ passenger.name + " " + passenger.surname }}</p>
