reimplemented design of older components to be corresponding to main one

--- a/HopIn/src/app/account-update/account-update.component.html
+++ b/HopIn/src/app/account-update/account-update.component.html
@@ -1,4 +1,6 @@
-<app-passenger-account-options></app-passenger-account-options>
-<app-account-settings></app-account-settings>
-<app-change-password></app-change-password>
-<app-change-payment-info></app-change-payment-info>
+<div class="account-update-container border">
+    <app-passenger-account-options></app-passenger-account-options>
+    <!-- <app-account-settings></app-account-settings>
+    <app-change-password></app-change-password> -->
+    <app-change-payment-info></app-change-payment-info>
+</div>
