--- a/HopIn/src/app/passenger-account-options/passenger-account-options.component.html
+++ b/HopIn/src/app/passenger-account-options/passenger-account-options.component.html
@@ -1,9 +1,14 @@
 <div id="passenger-account-options-container">
-    <div class="account-options" [ngClass]="colors.accountSettingsColor" [routerLink]="['/account-settings']" id="account-settings-option" ><span class="responsive-span">account</span> settings</div>
-    <div class="account-options" [ngClass]="colors.passwordColor" [routerLink]="['/change-password']" id="password-option"><span class="responsive-span">change</span> password</div>
-    <div class="account-options" [ngClass]="colors.paymentInfoColor" [routerLink]="['/change-payment-info']" id="payment-info-option"><span class="responsive-span">change</span> payment info</div>
+    <div class="account-options" id="account-settings-option" (click)="selectOption('settings')" 
+    [ngClass]="{'dark-blue' : option == 'settings', 'dark-gray': option != 'settings'}">
+        <span class="responsive-span">account</span> settings
+    </div>
+    <div class="account-options" id="password-option" (click)="selectOption('password')"
+      [ngClass]="{'dark-blue' : option == 'password', 'dark-gray': option != 'password'}">
+        <span class="responsive-span">change</span> password
+    </div>
+    <div class="account-options" id="payment-info-option" (click)="selectOption('payment')"
+    [ngClass]="{'dark-blue' : option == 'payment', 'dark-gray': option != 'payment'}">
+        <span class="responsive-span">change</span> payment info
+    </div>
 </div>
-
-<!-- <div class="account-options" [routerLink]="['/account-settings']" id="account-settings-option"><span class="responsive-span">account</span> settings</div>
-<div class="account-options" [routerLink]="['/change-password']" id="password-option"><span class="responsive-span">change</span> password</div>
-<div class="account-options" [routerLink]="['/change-payment-info']" id="payment-info-option"><span class="responsive-span">change</span> payment info</div> -->
