added routing to suggestion page

--- a/HopIn/src/app/order-ride/order-ride.component.css
+++ b/HopIn/src/app/order-ride/order-ride.component.css
@@ -1,4 +1,4 @@
-pickup-destination-form {
+::ng-deep pickup-destination-form {
     height: fit-content;
     width: fit-content;
     position: absolute;
