--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -1,2 +1,2 @@
-<pickup-destination-form></pickup-destination-form>
+<ng-container *ngComponentOutlet="currentComponent"></ng-container>
 <map></map>
