--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -1,7 +1,7 @@
 <div id="account-container" [ngClass]="isDriver ? 'account-container-driver' : 'account-container-passenger'">
     <img [src]="url" class="profile-img">
   
-    <p id="userName">{{ passenger.name + " " + passenger.surname }}</p>
+    <p id="userName">{{ user.name + " " + user.surname }}</p>
     <p class="roleText" >passenger</p>
 
     <!-- CONTACT INFO -->
@@ -12,11 +12,11 @@
     <div class="data">
         <div class="keyValue">
             <p class="key">Email:</p>
-            <p id="email" class="value">{{ passenger.email }}</p>
+            <p id="email" class="value">{{ user.email }}</p>
         </div>
         <div class="keyValue">
             <p class="key">Phone number:</p>
-            <p id="phoneNumber" class="value">{{ passenger.telephoneNumber }}</p>
+            <p id="phoneNumber" class="value">{{ user.telephoneNumber }}</p>
         </div>
     </div>
 
@@ -28,7 +28,7 @@
     <div class="data">
         <div class="keyValue">
             <p class="key">Address:</p>
-            <p id="address" class="value">{{ passenger.address }}</p>
+            <p id="address" class="value">{{ user.address }}</p>
         </div>
     </div>
 
