added more dynamically adjustment of account components for different roles

--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -2,7 +2,9 @@
     <img [src]="url" class="profile-img">
   
     <p id="userName">{{ user.name + " " + user.surname }}</p>
-    <p class="roleText" >passenger</p>
+    <p class="roleText" *ngIf="this.isDriver === false">passenger</p>
+    <p class="roleText" *ngIf="this.isDriver === true">driver</p>
+
 
     <!-- CONTACT INFO -->
     <div class="sectionTitle">
