--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -108,12 +108,13 @@ p {
 }
 
  @media only screen and (max-width: 900px) {
-    #account-container {
+    #account-container-driver {
         width: 55vw;
+        margin-top: 5vh;
     }
 
     button {
-        font-size: 0.6em;
+        font-size: 0.7em;
     }
 
     .data {
