input from vehicle info sent to back

--- a/HopIn/src/app/change-vehicle-info/change-vehicle-info.component.html
+++ b/HopIn/src/app/change-vehicle-info/change-vehicle-info.component.html
@@ -32,7 +32,7 @@
             <i class='fas fa-shuttle-van'></i>
             <span>Van</span>
         </button>
-        <button class="icon-button" [ngClass]="{'light-blue': vehicleType=='luxury-car'}" (click)="changeVehicleType('luxury-car')" mat-flat-button>
+        <button class="icon-button" [ngClass]="{'light-blue': vehicleType=='luxury'}" (click)="changeVehicleType('luxury')" mat-flat-button>
             <i class='fas fa-shuttle-van'></i>
             <span>Luxury car</span>
         </button>
