reimplemented user personal info update with driver info. Sent to back and shown on front

--- a/HopIn/src/app/account-update/account-update.component.html
+++ b/HopIn/src/app/account-update/account-update.component.html
@@ -1,5 +1,5 @@
 <div class="account-update-container border">
-    <app-passenger-account-options></app-passenger-account-options>
+    <app-account-options></app-account-options>
     <app-account-settings *ngIf="option == 'settings'"></app-account-settings>
     <app-change-password  *ngIf="option == 'password'"></app-change-password>
     <app-change-payment-info *ngIf="option == 'payment'"></app-change-payment-info>
