--- a/HopIn/src/app/account-settings/account-settings.component.html
+++ b/HopIn/src/app/account-settings/account-settings.component.html
@@ -4,7 +4,7 @@
             <div class="profile-img-container">
                 <img [src]="profileImgPath" class="profile-img">
                 <button id="update-img-btn" type="button" (click)="imageInput.click()">
-                    <i class="fa fa-pencil"></i>
+                    <i class="fas fa-pencil-alt"></i>
                     <input #imageInput type="file" (change)="onImageSelect($event)" style="display: none">
                 </button>
             </div>
