added map init just before route drawing to lessen lag between those two actions

--- a/HopIn/src/app/route-suggestion/route-suggestion.component.css
+++ b/HopIn/src/app/route-suggestion/route-suggestion.component.css
@@ -125,9 +125,9 @@ h1 {
     border-radius: 10px;
 }
 
-::ng-deep #content{
+/* ::ng-deep #content{
     height: fit-content !important;
-}
+} */
 
 @media screen and (max-width: 1650px) {
     #smaller-cards-container {
