--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -1,7 +1,7 @@
 <div id="account-container" [ngClass]="isDriver ? 'account-container-driver' : 'account-container-passenger'">
     <img [src]="url" class="profile-img">
   
-    <p id="userName">{{ user.name + " " + user.surname }}</p>
+    <p id="userName">{{ passenger.name + " " + passenger.surname }}</p>
     <p class="roleText" *ngIf="this.isDriver === false">passenger</p>
     <p class="roleText" *ngIf="this.isDriver === true">driver</p>
 
@@ -14,11 +14,11 @@
     <div class="data">
         <div class="keyValue">
             <p class="key">Email:</p>
-            <p id="email" class="value">{{ user.email }}</p>
+            <p id="email" class="value">{{ passenger.email }}</p>
         </div>
         <div class="keyValue">
             <p class="key">Phone number:</p>
-            <p id="phoneNumber" class="value">{{ user.telephoneNumber }}</p>
+            <p id="phoneNumber" class="value">{{ passenger.telephoneNumber }}</p>
         </div>
     </div>
 
@@ -30,17 +30,17 @@
     <div class="data">
         <div class="keyValue">
             <p class="key">Address:</p>
-            <p id="address" class="value">{{ user.address }}</p>
+            <p id="address" class="value">{{ passenger.address }}</p>
         </div>
     </div>
 
 
      <!-- PAYMENT INFO -->
-     <div class="sectionTitle">
+     <div *ngif="!this.isDriver" class="sectionTitle">
         <p>Payment Info</p>
         <div class="line"></div>
     </div>
-    <div class="data">
+    <div *ngif="!this.isDriver" class="data">
         <div class="keyValue">
             <p class="key">Card:</p>
             <p id="card" class="value">**** **** *** 111</p>
@@ -48,6 +48,29 @@
         <div class="keyValue">
             <p class="key">Type:</p>
             <p id="cardType" class="value">Master Card</p>
+        </div>
+    </div>
+
+
+    <!-- VEHICLE INFO -->
+    <div *ngIf="isDriver" class="sectionTitle">
+        <p>Vehicle Info</p>
+        <div class="line"></div>
+    </div>
+    <div *ngIf="isDriver" class="data" id="vehicleDataContainer">
+        <div>
+            <div class="keyValue">
+                <p class="key">Model:</p>
+                <p id="model" class="value">{{ this.driver.model }}</p>
+            </div>
+            <div class="keyValue">
+                <p class="key">Reg plates:</p>
+                <p id="regPlates" class="value">{{ this.driver.licenseNumber }}</p>
+            </div>
+        </div>
+        <div id="vehicleTypeContainer">
+            <p class="key">Type:</p>
+            <img [src]="urlVehicleType">
         </div>
     </div>
 
