--- a/HopIn/src/app/route-suggestion/route-suggestion.component.html
+++ b/HopIn/src/app/route-suggestion/route-suggestion.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div id="smaller-cards-container">
-            <div class="left-icon-card">
+            <div class="left-icon-card smaller-card">
                 <div class="icon-container back-darker-gray">
                     <img src="../../assets/vectors/distance.svg">    
                 </div>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div class="left-icon-card">
+            <div class="left-icon-card smaller-card">
                 <div class="icon-container back-darker-gray">
                     <i class="fa-solid fa-stopwatch black"></i>
                 </div>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="left-icon-card">
+            <div class="left-icon-card smaller-card">
                 <div class="icon-container back-darker-gray">
                     <i class="fa fa-car black" aria-hidden="true"></i>  
                 </div>
@@ -58,7 +58,7 @@
                 </div>
             </div>
         
-            <div class="left-icon-card">
+            <div class="left-icon-card smaller-card">
                 <div class="icon-container back-darker-gray">
                     <i class="fa-solid fa-sack-dollar black"></i>
                 </div>
