fixed vehicle type image design, used ngClass to use different class for different type images

--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -70,7 +70,7 @@
         </div>
         <div id="vehicleTypeContainer">
             <p class="key">Type:</p>
-            <img [src]="urlVehicleType">
+            <img  [ngClass]="isLuxury ? 'luxuryImgWidth': 'imgWidth'" [src]="urlVehicleType">
         </div>
     </div>
 
