--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -97,8 +97,14 @@ p {
     margin-left: auto;
  }
 
-#vehicleTypeContainer > img{
+.imgWidth{
     width: 30px;
+    height: 30px;
+    margin-right: 3px;
+}
+
+.luxuryImgWidth {
+    width: 40px;
     height: 30px;
     margin-right: 3px;
 }
