changed vehicle type to 'car' and fixed pickup destination responsivness problem

--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -1,2 +1,3 @@
-<ng-container *ngComponentOutlet="currentComponent"></ng-container>
+<!-- <ng-container *ngComponentOutlet="currentComponent"></ng-container> -->
+<pickup-destination-form></pickup-destination-form>
 <vehicles-map></vehicles-map>
