--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -129,10 +129,16 @@ p {
 }
 
  @media only screen and (max-width: 900px) {
-    #account-container-driver {
+    .account-container-driver {
         width: 55vw;
         margin-top: 5vh;
     }
+
+    .account-container-passenger {
+        width: 55vw;
+        margin-top: 5vh;
+    }
+
 
     button {
         font-size: 0.7em;
