--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -258,6 +258,12 @@ canvas {
 
 
 @media only screen and (max-width: 900px) {
+  .containerDesign {
+    margin: 0;
+    margin-top: 4vh;
+    margin-left: 0 !important;
+  }
+
   #userGraphContainer {
     flex-direction: column;
   }
