--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -23,6 +23,18 @@
     margin-top: 15vh;
 }
 
+.account-container-admin {
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 25px 25px;
+    height: 60vh;
+    border: 1px solid #E6E6E6;
+    border-radius: 10px;
+    margin-top: 10vh;}
+
 
 img {
     width: 6rem;
