fixed minor errors is account details component

--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -141,16 +141,10 @@ p {
 }
 
  @media only screen and (max-width: 900px) {
-    .account-container-driver {
+    .account-container-driver, .account-container-admin, .account-container-passenger {
         width: 55vw;
         margin-top: 5vh;
     }
-
-    .account-container-passenger {
-        width: 55vw;
-        margin-top: 5vh;
-    }
-
 
     button {
         font-size: 0.7em;
