deleted static and implemented dynamic documents loading

--- a/HopIn/src/app/change-documents/change-documents.component.html
+++ b/HopIn/src/app/change-documents/change-documents.component.html
@@ -1,19 +1,11 @@
 <div>
     <form fxLayout="column">
-        <div class="document-container">
+        <div *ngFor="let document of documents;"  class="document-container">
             <mat-icon>document_scanner</mat-icon>
-            <span (click)="openLicencePopUp()">Driver licence</span>
+            <span (click)="openLicencePopUp()">{{ document.name }}</span>
             <button id="update-img-btn" type="button" (click)="licenceFileInput.click()">
                 <i class="fas fa-pencil-alt"></i>
                 <input #licenceFileInput type="file" style="display: none" (change)="onLicenceFileSelect($event)">
-            </button>
-        </div>
-        <div class="document-container">
-            <mat-icon>document_scanner</mat-icon>
-            <span (click)="openRegistrationPopUp()">Vehicle registration</span>
-            <button id="update-img-btn" type="button" (click)="registrationFileInput.click()">
-                <i class="fas fa-pencil-alt"></i>
-                <input #registrationFileInput type="file" style="display: none" (change)="onRegistrationFileSelect($event)">
             </button>
         </div>
         <button class="conf-button" mat-raised-button type="submit">Save</button>
