added buttons for adding and deleting document without listeners

--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -101,7 +101,7 @@ html, body { height: 100%; width: 100%; margin: 0; font-family: "Poppins", sans-
     border-radius: 50%;
     border: none;
     padding: 3px 5px;
-    background-color: #B1B1B1;
+    background-color: #D9D9D9;
     color: #1E4A5A;
     cursor: pointer;
     font-size: 16px;
