--- a/HopIn/src/app/change-documents/change-documents.component.css
+++ b/HopIn/src/app/change-documents/change-documents.component.css
@@ -1,18 +1,22 @@
-#update-img-btn {
-    position: absolute;
-    right: 0;
-    margin-right: 10px;
-    border-radius: 50%;
-    border: none;
-    padding: 3px 5px;
-    background-color: #D9D9D9;
+#add-document-container{
+    margin: 22px auto;
+    border: 0;
+    padding: 0;
+    padding-left: -10px;
+    color: #B1B1B1;
+}
+
+#add-document-container span {
+    font-size: 0.8em;
+}
+
+#add-document-container mat-icon {
+    transform: scale(1.2);
     color: #1E4A5A;
     cursor: pointer;
-    font-size: 16px;
-    float: right;
 }
- 
 
+ 
 .document-container {
     width: 80%;
     position: relative;
@@ -36,6 +40,35 @@
     font-size: 0.9em;
     cursor: pointer;
 }
+
+
+.document-btns-container{
+    display: flex;
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+    color: #1E4A5A;
+    font-size: 16px;
+    float: right;
+}
+
+#update-img-btn{
+    margin: 0;
+}
+
+#delete-document-btn{
+    border: none;
+    margin-left: 3px;
+    padding-top: 2px;
+    transform: scale(1.1);
+    background-color: white;
+    cursor: pointer;
+}
+
+#delete-document-btn > mat-icon {
+    color: #1E4A5A;
+}
+
 
 form > button {
     position: absolute;
