added dialog for document update. Update works only on front

--- a/HopIn/src/app/account-update/account-update.component.html
+++ b/HopIn/src/app/account-update/account-update.component.html
@@ -4,5 +4,5 @@
     <app-change-password  *ngIf="option == 'password'"></app-change-password>
     <app-change-payment-info *ngIf="option == 'payment'"></app-change-payment-info>
     <app-change-vehicle-info *ngIf="option == 'vehicle'"></app-change-vehicle-info>
-    <app-change-documents *ngIf="option == 'documents'"></app-change-documents>
+    <app-driver-documents *ngIf="option == 'documents'"></app-driver-documents>
 </div>
